--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,7 +3,9 @@
  * Copyright 2013-2018 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
-
+ul {
+  list-style: none;
+}
 #mainNav {
   min-height: 56px;
   background-color: #fff;
@@ -91,7 +93,7 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-masthead.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg2.jpg");
   background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg2.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -167,7 +169,7 @@
 }
 
 .about-section {
-  padding-top: 10rem;
+  padding-top: 5rem;
   background: -webkit-gradient(linear, left top, left bottom, from(#161616), color-stop(75%, rgba(22, 22, 22, 0.9)), to(rgba(22, 22, 22, 0.8)));
   background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
 }
@@ -320,4 +322,31 @@ footer {
 
 .main-banner-content {
   position: relative;
+}
+
+.profile-photo {
+  border-radius: 15%;
+  border: solid 5px #64A19D;
+  margin-bottom: 25px;
+}
+.skills {
+  padding-bottom: 100px;
+  text-align: center;
+}
+.skills-title {
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+.skills-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+}
+.skills-list li {
+  background: #64a19d;
+  border-radius: 5px;
+  padding:5px 10px;
+  margin: 5px;
+  min-width: 7%;
+  color: #fff;
 }
