--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -6,6 +6,9 @@
 ul {
   list-style: none;
 }
+h1,h2,h3,h4,h5 {
+  font-family: 'Quicksand',helvetica
+}
 #mainNav {
   min-height: 56px;
   background-color: #fff;
@@ -102,7 +105,6 @@ ul {
 }
 
 .masthead h1 {
-  font-family: 'Quicksand';
   font-size: 2.5rem;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
@@ -349,4 +351,13 @@ footer {
   margin: 5px;
   min-width: 7%;
   color: #fff;
+}
+
+.portfolio-title {
+  margin-bottom: 100px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
+  color:rgba(0,0,0,.7);
+  font-size: 3.2em;
 }
