--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -213,15 +213,19 @@ h1,h2,h3,h4,h5 {
 }
 
 .signup-section {
-  padding: 10rem 0;
+  padding: 6rem 0;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-signup.jpg");
   background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+  text-align: center;
 }
 
+.signup-section h1 {
+  text-transform: uppercase;
+}
 .signup-section .form-inline input {
   -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
@@ -370,4 +374,8 @@ footer {
   font-size: .75em;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+
+.fa-linkedin,.fa-github,.fa-envelope {
+  font-size: 2.15em;
 }
